--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,36 @@ img {
 .p2 {
     margin-left: 0px;
 }
+
+nav {
+    background-color: #333;
+    text-align: center;
+    float: right;
+    border-radius: 999px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    margin: 30px;
+    margin-top: 38px;
+}
+
+nav ul {
+    display: relative;
+    list-style: none;
+    padding: 8px;
+    margin-left: 16px;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 16px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    color: #408EE1;
+}
