--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,15 @@ li {
     font: white;
     font-size: 16px;
     font-weight: 700;
-    float: right;
     padding: 20px;
-    margin: 45px;
     background-color: #408EE1;
     border-radius: 999px;
     border: None;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    position: absolute;   
+    left: 375px;
+    margin: 30px;
+    margin-top: 46px;
 }
 
 /* change colors for dark theme to work */
@@ -111,23 +113,32 @@ img {
 nav {
     background-color: #333;
     text-align: center;
-    float: right;
     border-radius: 999px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     margin: 30px;
     margin-top: 38px;
+    display: flex;
+    margin-bottom: 160px;
 }
 
 nav ul {
-    display: relative;
+    position: absolute;
     list-style: none;
     padding: 8px;
     margin-left: 16px;
+    float: left;
+    left: 80px;
+    top: 40px;
 }
 
 nav ul li {
-    display: inline;
+    position: relative;
+    display: inline-block;
     margin-right: 16px;
+    background-color: #201e21;
+    padding: 20px;
+    border-radius: 999px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 nav ul li a {
@@ -139,4 +150,23 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #408EE1;
+}
+
+.profile-card {
+    width: 300px;
+    margin: 20px auto;
+    border: 1px solid #ddd;
+    padding: 20px;
+    background-color: white;
+    text-align: center;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 8px;
+    float: right;
+}
+
+.profile-card .profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
 }
